# cmake_vscode_template

./: CMakeLists.txt  readme.md
main/: hello_cmake.cpp
